[gd_scene load_steps=2 format=3 uid="uid://ceul87fbusy4d"]

[ext_resource type="Script" path="res://scripts/create_card_address.gd" id="1_fq3kx"]

[node name="CreateCardAddress" type="PanelContainer"]
offset_left = 17.0
offset_top = 25.0
offset_right = 366.0
offset_bottom = 621.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_fq3kx")
metadata/_edit_vertical_guides_ = [98.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Cancel" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Cancelar"

[node name="EditContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 5
columns = 2

[node name="Padding" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="Padding2" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Estado:"
horizontal_alignment = 1
clip_text = true

[node name="EditStateValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Estado"
max_length = 64

[node name="CpfLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Cidade:"
horizontal_alignment = 1
clip_text = true

[node name="EditCityValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Cidade"
max_length = 64

[node name="TelephoneLabel" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "Nome da Rua:"
horizontal_alignment = 1
clip_text = true

[node name="EditStreetNameValue" type="LineEdit" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Nome da Rua"
max_length = 64

[node name="TelephoneLabel2" type="Label" parent="MarginContainer/VBoxContainer/EditContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 11
text = "NÃºmero:"
horizontal_alignment = 1
clip_text = true

[node name="EditNumberSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/EditContainer"]
unique_name_in_owner = true
layout_mode = 2
max_value = 10000.0
alignment = 1

[node name="padding" type="Control" parent="MarginContainer/VBoxContainer/EditContainer"]
layout_mode = 2

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Adicionar"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancelar"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Cancel" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
